Fix icon alignment

--- a/src/styles/table/table-body-row.css
+++ b/src/styles/table/table-body-row.css
@@ -10,6 +10,7 @@
   display: block;
   width: 30px;
   height: 30px;
+  margin: 0 auto;
   line-height: 1;
 }
 
